<resources>
    <string name="app_name">CineDomeProg</string>
    <string name="this_is_the_first_post">This is the first post</string>
    <string name="press_rating_string">Note de la presse : </string>
    <string name="user_rating_string">Note des spectateurs : </string>
    <string name="button_video_string">Lien vers la bande-annonce</string>
    <string name="release_date_string">Date de sortie : </string>
    <string name="director_string">Réalisateur : </string>
    <string name="actors_string">Acteurs : </string>
</resources>
